      /other/ Maildirs used to be quite slow the first time, but is now very fast.

      ~mu4e-cache-maildir-list~ is obsolete / non-functional now.

    - after retrieving mail (~mu4e-update-mail-and-index~), save the output of the
      retrieval command in a buffer =*mu4e-last-update*=, = which can be useful
      for diagnosis.

    - support new-mail notifications on MacOS out-of-the-box

    - allow sorting by tag

    - ~mu4e~ now follows Emacs' ~package~ guidelines

*** Contributors

    Thanks to our contributors - code committers belows, but also to everyone
    who filed tickets, asked questions, answered them etc.

    Babak Farrokhi, Christophe Troestler, Christoph Reichenbach, Daniel Fleischer,
    David Edmondson, Davide Masserut, Dirk-Jan C. Binnema, Jeremy Sowden,
    Lin Jian, Martin R. Albrecht, Nacho Barrientos, Nicholas Vollmer,
    Nicolas P. Rougier, ramon diaz-uriarte (at Phelsuma), reindert, Ruijie Yu,
    Sean Farley, stardiviner, Tassilo Horn and Thierry Volpiatto


* Old news
  :PROPERTIES:
  :VISIBILITY: folded
  :END:

** 1.10 (released on March 26, 2023)

*** mu

   - a new command-line parser, which allows (hopefully!) for a better user
     interaction; better error checking and more

   - Invalid e-mail addresses are no longer added to the contacts-cache.

   - The ~cfind~ command gained ~--format=json~, which makes it easy to further
     process contact information, e.g. using ~jq~. See the manpage for more
     details.

   - The ~init~ command learned ~--reinit~ to reinitialize the database with the
     settings of an existing one

   - The ~script~ command is gone, and integrated with ~mu~ directly, i.e. the
     scripts (when enabled) are directly visible in the ~mu~ output. Also see the
     Guile section.

   - The ~extract~ command gained the ~--uncooked~ option to tell it to _not_ replace
     spaces with dashes in extracted filenames (and a few other things).
